--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,76 @@
-altair==5.4.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-attrs==24.2.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-contourpy==1.3.0
-cycler==0.12.1
-debugpy @ file:///work/perseverance-python-buildout/croot/debugpy_1698884710808/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
-fonttools==4.53.1
-gitdb==4.0.11
-GitPython==3.1.43
-idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1725050136642/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
-jupyter_core @ file:///croot/jupyter_core_1718818295206/work
-kiwisolver==1.4.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-mdurl==0.1.2
-narwhals==1.8.2
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-numpy==2.1.1
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
-pandas==2.2.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow==10.4.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
-protobuf==5.28.2
-psutil @ file:///work/perseverance-python-buildout/croot/psutil_1698863411559/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
-pyarrow==17.0.0
-pydeck==0.9.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-pyparsing==3.1.4
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-pytz==2024.2
-pyzmq @ file:///croot/pyzmq_1705605076900/work
-referencing==0.35.1
-requests==2.32.3
-rich==13.8.1
-rpds-py==0.20.0
-scikit-learn==1.5.2
-scipy==1.14.1
-setuptools==75.1.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-smmap==5.0.1
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-streamlit==1.38.0
-tenacity==8.5.0
-threadpoolctl==3.5.0
-toml==0.10.2
-tornado @ file:///croot/tornado_1718740109488/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-tzdata==2024.1
-urllib3==2.2.3
-watchdog==4.0.2
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-wheel==0.44.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+_openmp_mutex=5.1=1_gnu
+altair=5.4.1=pypi_0
+attrs=24.2.0=pypi_0
+blinker=1.8.2=pypi_0
+bzip2=1.0.8=h5eee18b_6
+ca-certificates=2024.7.2=h06a4308_0
+cachetools=5.5.0=pypi_0
+certifi=2024.8.30=pypi_0
+charset-normalizer=3.3.2=pypi_0
+click=8.1.7=pypi_0
+contourpy=1.3.0=pypi_0
+cycler=0.12.1=pypi_0
+expat=2.6.3=h6a678d5_0
+fonttools=4.53.1=pypi_0
+gitdb=4.0.11=pypi_0
+gitpython=3.1.43=pypi_0
+idna=3.10=pypi_0
+jinja2=3.1.4=pypi_0
+joblib=1.4.2=pypi_0
+jsonschema=4.23.0=pypi_0
+jsonschema-specifications=2023.12.1=pypi_0
+kiwisolver=1.4.7=pypi_0
+ld_impl_linux-64=2.38=h1181459_1
+libffi=3.4.4=h6a678d5_1
+libgcc-ng=11.2.0=h1234567_1
+libgomp=11.2.0=h1234567_1
+libstdcxx-ng=11.2.0=h1234567_1
+libuuid=1.41.5=h5eee18b_0
+markdown-it-py=3.0.0=pypi_0
+markupsafe=2.1.5=pypi_0
+matplotlib=3.9.2=pypi_0
+mdurl=0.1.2=pypi_0
+narwhals=1.8.2=pypi_0
+ncurses=6.4=h6a678d5_0
+numpy=2.1.1=pypi_0
+openssl=3.0.15=h5eee18b_0
+packaging=24.1=pypi_0
+pandas=2.2.3=pypi_0
+pillow=10.4.0=pypi_0
+pip=24.2=py312h06a4308_0
+protobuf=5.28.2=pypi_0
+pyarrow=17.0.0=pypi_0
+pydeck=0.9.1=pypi_0
+pygments=2.18.0=pypi_0
+pyparsing=3.1.4=pypi_0
+python=3.12.5=h5148396_1
+python-dateutil=2.9.0.post0=pypi_0
+pytz=2024.2=pypi_0
+readline=8.2=h5eee18b_0
+referencing=0.35.1=pypi_0
+requests=2.32.3=pypi_0
+rich=13.8.1=pypi_0
+rpds-py=0.20.0=pypi_0
+scikit-learn=1.5.2=pypi_0
+scipy=1.14.1=pypi_0
+setuptools=75.1.0=py312h06a4308_0
+six=1.16.0=pypi_0
+smmap=5.0.1=pypi_0
+sqlite=3.45.3=h5eee18b_0
+streamlit=1.38.0=pypi_0
+tenacity=8.5.0=pypi_0
+threadpoolctl=3.5.0=pypi_0
+tk=8.6.14=h39e8969_0
+toml=0.10.2=pypi_0
+tornado=6.4.1=pypi_0
+typing-extensions=4.12.2=pypi_0
+tzdata=2024.1=pypi_0
+urllib3=2.2.3=pypi_0
+watchdog=4.0.2=pypi_0
+wheel=0.44.0=py312h06a4308_0
+xz=5.4.6=h5eee18b_1
+zlib=1.2.13=h5eee18b_1
